--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
     if route === '/signin' || route === '/signup' || route === '/settings' || route === '/myDocuments' || route === '/resetPassword' || route === '/forgotPassword'
       link(rel='stylesheet' href='./stylesheets/style.css')
     else
-      link(rel='stylesheet' href='./stylesheets/style.css')
+      link(rel='stylesheet' href='../stylesheets/style.css')
     if document
       link(rel='stylesheet' href='../stylesheets/tei.css')
       if current_user.role.label === 'curator'
