fix /documents route

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -98,8 +98,11 @@ html
   else if search
     script(src='../../javascripts/lib/jquery.js')
     script(src='../../javascripts/search.js')
-  else if route === '/signin' || route === '/signup' || route === '/settings' || route === '/myDocuments' || route === '/resetPassword' || route === '/forgotPassword' || route === '/' || route === '/documents' 
+  else if route === '/signin' || route === '/signup' || route === '/settings' || route === '/myDocuments' || route === '/resetPassword' || route === '/forgotPassword' || route === '/' 
     script(src='./javascripts/lib/jquery.js')
+  else if route === '/documents' 
+    script(src='./javascripts/lib/jquery.js')
+    script(src='./javascripts/search.js')
   else
     script(src='../javascripts/lib/jquery.js')
 
