--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -40,7 +40,7 @@ block content
             each document, index in documents
               div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
                 div(class='col-2')
-                  a(href='../documents/' + document._id) #{document._id}
+                  a(href='./documents/' + document._id) #{document._id}
                 if document.status === 'metadata'
                   div(class='col-2') Metadata validation
                 else if document.status === 'datasets'
