fix /documents route

--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -11,7 +11,7 @@ block content
               div(class='header') Custom search :
           div(class='row')
             div(class='col-12 text-center')
-              form#custom-search(role='form', action='/documents',method='get')
+              form#custom-search(role='form', action='./documents',method='get')
                 div pmid : 
                   input(type='text' name='pmid' placeholder='pmid')
                 div doi : 
