--- a/views/layout.pug
+++ b/views/layout.pug
@@ -99,8 +99,8 @@ html
     script(src='../../javascripts/lib/jquery.js')
     script(src='../../javascripts/process/backoffice.js')
   else if search
-    script(src='../../javascripts/lib/jquery.js')
-    script(src='../../javascripts/search.js')
+    script(src='../javascripts/lib/jquery.js')
+    script(src='../javascripts/search.js')
   else if route === '/signin' || route === '/signup' || route === '/settings' || route === '/myDocuments' || route === '/resetPassword' || route === '/forgotPassword' || route === '/' 
     script(src='./javascripts/lib/jquery.js')
   else
