fix /documents route

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -101,7 +101,7 @@ html
   else if search
     script(src='../javascripts/lib/jquery.js')
     script(src='../javascripts/search.js')
-  else if route === '/signin' || route === '/signup' || route === '/settings' || route === '/myDocuments' || route === '/resetPassword' || route === '/forgotPassword' || route === '/' 
+  else if route === '/signin' || route === '/signup' || route === '/settings' || route === '/myDocuments' || route === '/resetPassword' || route === '/forgotPassword' || route === '/' || route === '/documents'
     script(src='./javascripts/lib/jquery.js')
   else
     script(src='../javascripts/lib/jquery.js')
