--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,16 +4,16 @@ html
     title DataSeer
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')  
-    link(rel='stylesheet' href=deep + 'stylesheets/style.css')
+    link(rel='stylesheet' href=deep.resources + 'stylesheets/style.css')
     if document
-      link(rel='stylesheet' href=deep + 'stylesheets/tei.css')
+      link(rel='stylesheet' href=deep.resources + 'stylesheets/tei.css')
       if current_user.role.label === 'curator'
-        link(rel='stylesheet' href=deep + 'stylesheets/process/datasets.css')
+        link(rel='stylesheet' href=deep.resources + 'stylesheets/process/datasets.css')
       else
-        link(rel='stylesheet' href=deep + 'stylesheets/process/'+ document.status + '.css')
+        link(rel='stylesheet' href=deep.resources + 'stylesheets/process/'+ document.status + '.css')
     if backoffice
-      link(rel='stylesheet' href=deep + 'stylesheets/style.css')
-      link(rel='stylesheet' href=deep + 'stylesheets/process/backoffice.css')
+      link(rel='stylesheet' href=deep.resources + 'stylesheets/style.css')
+      link(rel='stylesheet' href=deep.resources + 'stylesheets/process/backoffice.css')
   body
     if current_user
       div#user_id #{current_user.id}
@@ -27,37 +27,37 @@ html
         else
           div(id='user' style='position:absolute; top:0px; right:25px; text-align:right;')
             label(style='font-size:small;') 
-              a(href='/signup' class=(route === '/signup') ? 'active' : '') Sign up 
+              a(href=deep.url + 'signup' class=(route === '/signup') ? 'active' : '') Sign up 
               | or 
-              a(href='/signin' class=(route === '/signup') ? 'active' : '') Sign in 
+              a(href=deep.url + 'signin' class=(route === '/signup') ? 'active' : '') Sign in 
               | to access DataSeer
         div(id='navbar' style='position:absolute; bottom:0px; right:10px; text-align:right;')
           ul
             if current_user
               if current_user.role.label === 'curator'
                 li
-                  a(href='/' class=(route === '/') ? 'nav active' : 'nav') Help
+                  a(href=deep.url class=(route === '/') ? 'nav active' : 'nav') Help
               li
-                a(href='/myDocuments' class=(route === '/myDocuments') ? 'nav active' : 'nav') My documents
+                a(href=deep.url + 'myDocuments' class=(route === '/myDocuments') ? 'nav active' : 'nav') My documents
               if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
                 li
-                  a(href='/documents' class=(route === '/documents') ? 'nav active' : 'nav') All documents
+                  a(href=deep.url + 'documents' class=(route === '/documents') ? 'nav active' : 'nav') All documents
               li
-                a(href='/backoffice/upload' class=(route === '/backoffice/upload') ? 'nav active' : 'nav') Upload
+                a(href=deep.url + 'backoffice/upload' class=(route === '/backoffice/upload') ? 'nav active' : 'nav') Upload
               if current_user.role.label === 'curator'
                 li
-                  a(href='/backoffice/accounts' class=(route === '/backoffice/accounts') ? 'nav active' : 'nav') Accounts
+                  a(href=deep.url + 'backoffice/accounts' class=(route === '/backoffice/accounts') ? 'nav active' : 'nav') Accounts
               li
-                a(href='/settings' class=(route === '/settings') ? 'nav active' : 'nav') Settings
+                a(href=deep.url + 'settings' class=(route === '/settings') ? 'nav active' : 'nav') Settings
               li
-                a(href='/signout' class=(route === '/signout') ? 'nav active' : 'nav') Sign out
+                a(href=deep.url + 'signout' class=(route === '/signout') ? 'nav active' : 'nav') Sign out
             else
               li
-                a(href='/signup' class=(route === '/signup') ? 'nav active' : 'nav') Sign up
+                a(href=deep.url + 'signup' class=(route === '/signup') ? 'nav active' : 'nav') Sign up
               li
-                a(href='/signin' class=(route === '/signin') ? 'nav active' : 'nav' style='color:#184D7E;') Sign in
+                a(href=deep.url + 'signin' class=(route === '/signin') ? 'nav active' : 'nav' style='color:#184D7E;') Sign in
               li
-                a(href='/forgotPassword' class=(route === '/forgotPassword') ? 'nav active' : 'nav' style='color:#184D7E;') Forgot password
+                a(href=deep.url + 'forgotPassword' class=(route === '/forgotPassword') ? 'nav active' : 'nav' style='color:#184D7E;') Forgot password
 
     block content
 
@@ -68,28 +68,28 @@ html
 
   if document
     div(id='document.id' class='data' value=(document._id))
-    script(src=deep + 'javascripts/lib/jquery.js')
-    script(src=deep + 'javascripts/lib/randomColor.min.js')
-    script(src=deep + 'javascripts/lib/htmlBuilder.js')
-    script(src=deep + 'javascripts/lib/view.js')
-    script(src=deep + 'javascripts/lib/documentView.js')
-    script(src=deep + 'javascripts/lib/datasetForm.js')
-    script(src=deep + 'javascripts/lib/datasetsList.js')
-    script(src=deep + 'javascripts/mongoDB.js')
-    script(src=deep + 'javascripts/dataseerML.js')
-    script(src=deep + 'javascripts/demo.js')
+    script(src=deep.resources + 'javascripts/lib/jquery.js')
+    script(src=deep.resources + 'javascripts/lib/randomColor.min.js')
+    script(src=deep.resources + 'javascripts/lib/htmlBuilder.js')
+    script(src=deep.resources + 'javascripts/lib/view.js')
+    script(src=deep.resources + 'javascripts/lib/documentView.js')
+    script(src=deep.resources + 'javascripts/lib/datasetForm.js')
+    script(src=deep.resources + 'javascripts/lib/datasetsList.js')
+    script(src=deep.resources + 'javascripts/mongoDB.js')
+    script(src=deep.resources + 'javascripts/dataseerML.js')
+    script(src=deep.resources + 'javascripts/demo.js')
     if current_user.role.label === 'curator'
-      script(src=deep + 'javascripts/process/datasets.js')
+      script(src=deep.resources + 'javascripts/process/datasets.js')
     else
-      script(src=deep + 'javascripts/process/'+ document.status + '.js')
+      script(src=deep.resources + 'javascripts/process/'+ document.status + '.js')
   else if backoffice
-    script(src=deep + 'javascripts/lib/jquery.js')
-    script(src=deep + 'javascripts/process/backoffice.js')
+    script(src=deep.resources + 'javascripts/lib/jquery.js')
+    script(src=deep.resources + 'javascripts/process/backoffice.js')
   else if search
-    script(src=deep + 'javascripts/lib/jquery.js')
-    script(src=deep + 'javascripts/search.js')
+    script(src=deep.resources + 'javascripts/lib/jquery.js')
+    script(src=deep.resources + 'javascripts/search.js')
   else
-    script(src=deep + 'javascripts/lib/jquery.js')
+    script(src=deep.resources + 'javascripts/lib/jquery.js')
 
   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
   script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
