--- a/views/signin.pug
+++ b/views/signin.pug
@@ -24,5 +24,5 @@ block content
 
         div(class='row')
           div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') No account yet? 
-            a(href='/signup') Open one here
+            a(href=deep.url + 'signup') Open one here
 
