--- a/views/signin.pug
+++ b/views/signin.pug
@@ -10,7 +10,7 @@ block content
             h2 Sign in
         div(class='row')
           div(class='col-12')
-            form(role='form', action='./signin',method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
+            form(role='form', action='./signin', method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
               if error
                 div(class='alert alert-warning' role='alert') #{error}
               if success
@@ -24,5 +24,5 @@ block content
 
         div(class='row')
           div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') No account yet? 
-            a(href=deep.url + 'signup') Open one here
+            a(href=root + 'signup') Open one here
 
