--- a/views/signup.pug
+++ b/views/signup.pug
@@ -10,7 +10,7 @@ block content
             h2 Sign up
         div(class='row')
           div(class='col-12')
-            form(role='form', action='./signup',method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
+            form(role='form', action='./signup', method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
               if error
                 div(class='alert alert-warning' role='alert') #{error}
               if success
@@ -24,4 +24,4 @@ block content
 
         div(class='row')
           div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') Already have an account?  
-            a(href=deep.url + 'signup') Sign in here
+            a(href=root + 'signup') Sign in here
