fix issue https://github.com/kermitt2/dataseer-web/issues/49

--- a/views/forms/documents/upload.pug
+++ b/views/forms/documents/upload.pug
@@ -13,4 +13,4 @@ div(class='container-fluid')
             label(for='dataseerML') Identify datasets automatically
     div(class='row')
       div(class='col-12')
-          button(type='submit' class='btn btn-primary btn-sm' id='addDocuments' style='margin-left:10px;') Upload the document
+          button(type='submit' class='btn btn-primary btn-sm' id='addDocuments' style='margin-left:10px;') Upload document
