Update : issue https://github.com/kermitt2/dataseer-web/issues/48 Test some render for documents list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,14 @@ body {
   text-decoration: underline;
 }
 
+.list a {
+  max-width: 100%;
+  width: 100%;
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .row[data] ul {
   list-style: none;
   padding: 0px;
