--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -2,6 +2,8 @@ extends ./layout
 
 block content
 
+  include ./functions/format.pug
+
   div(class='container-fluid')
     div(class='row')
       div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px;')
@@ -13,11 +15,12 @@ block content
             div(class='col-12')
               input#search(type='text' name='username' placeholder='Search for document (doi, pmid, title, email, etc)')
           div(class='row head-list' style='margin-right:10px; margin-left:10px;')
-            div(class='col-2') Url
-            div(class='col-2') Status
+            div(class='col-1') Url
+            div(class='col-1') Uploaded at
+            div(class='col-1') Status
             div(class='col-2') Modified by
             div(class='col-2') Journal
-            div(class='col-4') Title
+            div(class='col-5') Title
           if  documents.length === 0
             div(class='row')
               div(class='col-12 text-center')
@@ -25,21 +28,22 @@ block content
           else
             each document, index in documents
               div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
-                div(class='col-2')
-                    a(href=root + 'documents/' + document._id) #{document._id}
+                div(class='col-1')
+                   a(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
+                div(class='col-1') #{formatDate(document.uploaded_at)}
                 if document.status === 'metadata'
-                  div(class='col-2') Metadata validation
+                  div(class='col-1') Metadata validation
                 else if document.status === 'datasets'
-                  div(class='col-2') Datasets validation
+                  div(class='col-1') Datasets validation
                 else if document.status === 'finish'
-                  div(class='col-2') Process finished
+                  div(class='col-1') Process finished
                 div(class='col-2')
                   ul
                     each role, i in document.modifiedBy
                       each user, j in role
                         li #{user} (#{i})
                 div(class='col-2') #{document.metadata.journal}
-                div(class='col-4') #{document.metadata.articleTitle}
+                div(class='col-5') #{document.metadata.articleTitle}
 
           div(class='row')
             div(class='col-12' style='margin-top:20px;')
