--- a/views/layout.pug
+++ b/views/layout.pug
@@ -85,6 +85,8 @@ html
       script(src=root + 'javascripts/process/datasets.js')
     else
       script(src=root + 'javascripts/process/'+ document.status + '.js')
+    if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
+      script(src=root + 'javascripts/admin.js')
   else if backoffice
     script(src=root + 'javascripts/process/backoffice.js')
   else if search
