fix issue https://github.com/kermitt2/dataseer-web/issues/72

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -355,7 +355,15 @@ body > div > div > div.row > div:nth-child(1) {
 }
 
 #datasets_validation {
-  width: 100%;
+  display: inline-block;
+  width: 49.5%;
+  margin-top: 15px;
+}
+
+#previous_step {
+  margin-right: 1%;
+  display: inline-block;
+  width: 49.5%;
   margin-top: 15px;
 }
 
