--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -62,6 +62,10 @@ block content
         div(class='col-2')
           div(class='row')
             div(id='datasets-list' class='form bordered')
+            if current_user
+                if document
+                  if document.status !== 'metadata'
+                    button#previous_step.btn.btn-primary Metadata
             button(id='datasets_validation' class='btn btn-primary') Finish
 
   include ../modals/quit.pug
